feat: Preflight checks for OS and architecture

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,16 @@
 ---
+- name: Fail when unsupported architecture
+  ansible.builtin.fail:
+    msg: "Unsupported architecture"
+  when:
+    - fireactions_arch not in ['amd64', 'arm64']
+
+- name: Fail when unsupported OS
+  ansible.builtin.fail:
+    msg: "Unsupported OS"
+  when:
+    - fireactions_os not in ['linux']
+
 - name: Create group
   ansible.builtin.group:
     name: "{{ fireactions_group }}"
