--- a/galaxy.yml
+++ b/galaxy.yml
@@ -2,7 +2,7 @@
 namespace: hostinger
 name: fireactions
 repository: https://github.com/hostinger/ansible-collection-fireactions
-version: 0.0.1
+version: 0.0.1 # x-release-please-version
 readme: README.md
 authors:
   - konradasb
