--- a/roles/client/defaults/main.yml
+++ b/roles/client/defaults/main.yml
@@ -1,10 +1,9 @@
 ---
 fireactions_version: 0.0.1
-fireactions_os: linux
 fireactions_arch: amd64
 # (konradasb): TODO: Change this to GitHub releases after public release.
 fireactions_url: |
-  https://storage.googleapis.com/fireactions/fireactions-v{{ fireactions_version }}-{{ fireactions_os }}-{{ fireactions_arch }}.tar.gz
+  https://storage.googleapis.com/fireactions/fireactions-v{{ fireactions_version }}-linux-{{ fireactions_arch }}.tar.gz
 fireactions_install_dir: /opt/fireactions
 fireactions_create_group: true
 fireactions_group: fireactions
