--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -5,5 +5,6 @@
 
   roles:
   - hostinger.fireactions.containerd
+  - hostinger.fireactions.cni_plugins
   - hostinger.fireactions.firecracker
   - hostinger.fireactions.client
