--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,15 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        distro:
+        - ubuntu2204
+        - ubuntu2004
+        - debian12
+        - debian11
+        - debian10
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -26,3 +35,4 @@ jobs:
       env:
         ANSIBLE_FORCE_COLOR: '1'
         PY_COLORS: '1'
+        MOLECULE_DISTRO: ${{ matrix.distro }}
