--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -4,8 +4,8 @@ dependency:
 driver:
   name: docker
 platforms:
-  - name: ubuntu-22.04
-    image: geerlingguy/docker-ubuntu2204-ansible:latest
+  - name: default
+    image: geerlingguy/docker-${MOLECULE_DISTRO:-ubuntu2204}-ansible:latest
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
     command: ${MOLECULE_DOCKER_COMMAND:-""}
