--- a/roles/firecracker/defaults/main.yml
+++ b/roles/firecracker/defaults/main.yml
@@ -3,8 +3,6 @@ firecracker_version: 1.4.1
 firecracker_url: |
   https://github.com/firecracker-microvm/firecracker/releases/download/v{{ firecracker_version }}/firecracker-v{{ firecracker_version }}-{{ firecracker_arch }}.tgz
 firecracker_arch: x86_64
-firecracker_symlink_path: /usr/local/bin/firecracker
-firecracker_create_symlink: true
-firecracker_install_dir: /opt/firecracker/v{{ firecracker_version }}
+firecracker_install_dir: /opt/firecracker/{{ firecracker_version }}
 firecracker_owner: root
 firecracker_group: root
