--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,67 @@ on:
   pull_request:
 
 jobs:
-  test:
+  changed-files:
+    runs-on: ubuntu-latest
+    outputs:
+      roles: ${{ steps.changed-files.outputs.all_changed_files }}
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
+    - name: Get changed files
+      id: changed-files
+      uses: tj-actions/changed-files@v40
+      with:
+        dir_names: "true"
+        escape_json: "false"
+        json: "true"
+        dir_names_max_depth: 2
+        files: |
+          roles/**
+
+    - name: List all changed files
+      run: |
+        echo '${{ steps.changed-files.outputs.all_changed_files }}'
+
+  test-role:
+    if: needs.changed-files.outputs.roles != '[]'
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        role: ${{ fromJson(needs.changed-files.outputs.roles) }}
+        distro:
+        - ubuntu2204
+        - ubuntu2004
+        - debian12
+        - debian11
+        - debian10
+    needs: changed-files
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Set up Python 3
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+
+    - name: Install dependencies
+      run: |
+        pip3 install ansible molecule molecule-plugins[docker]
+
+    - name: Run Molecule tests.
+      run: |
+        cd ${{ matrix.role }} && molecule test
+      env:
+        ANSIBLE_FORCE_COLOR: '1'
+        PY_COLORS: '1'
+        MOLECULE_DISTRO: ${{ matrix.distro }}
+
+  test-collection:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
