--- a/roles/client/molecule/default/molecule.yml
+++ b/roles/client/molecule/default/molecule.yml
@@ -4,14 +4,15 @@ dependency:
 driver:
   name: docker
 platforms:
-  - name: ubuntu-22.04
-    image: geerlingguy/docker-ubuntu2204-ansible:latest
+  - name: default
+    image: geerlingguy/docker-${MOLECULE_DISTRO:-ubuntu2204}-ansible:latest
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     cgroupns_mode: host
     pre_build_image: true
     privileged: true
+    platform: amd64
 provisioner:
   name: ansible
   playbooks:
