--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,15 +8,31 @@ on:
 jobs:
   release-please:
     runs-on: ubuntu-latest
+    outputs:
+      release_created: ${{ steps.release-please.outputs.release_created }}
     steps:
-    - name: Checkout project
-      uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v4
 
     - name: Run release-please
       uses: google-github-actions/release-please-action@v3
+      id: release-please
       with:
         package-name: ansible-collection-fireactions
         release-type: python
         pull-request-title-pattern: 'chore${scope}: Release ${component} ${version}'
         token: ${{ secrets.ORG_GITHUB_TOKEN }}
         extra-files: galaxy.yml
+
+  release:
+    if: needs.release-please.outputs.release_created
+    runs-on: ubuntu-latest
+    needs: release-please
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Publish to Ansible Galaxy
+      uses: ansible/ansible-publish-action@v1.0.0
+      with:
+        api_key: ${{ secrets.ANSIBLE_GALAXY_API_KEY }}
