--- a/roles/client/meta/main.yml
+++ b/roles/client/meta/main.yml
@@ -80,7 +80,7 @@ dependencies:
     vars:
       sysctl_d:
         10-fireactions:
-        - name: net.ipv4.ip_forward
+        - name: net.ipv4.conf.all.forwarding
           value: 1
   - role: firecracker
     vars:
