--- a/roles/client/vars/main.yml
+++ b/roles/client/vars/main.yml
@@ -1,30 +1,9 @@
 ---
 _fireactions_client_config:
   fireactions_server_url: http://localhost:8080
-
-  poll_interval: 5s
-
-  node:
-    name: ""
-    cpu_overcommit_ratio: 1.0
-    ram_overcommit_ratio: 1.0
-    labels: {}
-
-  firecracker:
-    binary_path: /usr/local/bin/firecracker
-    kernel_image_path: /usr/local/share/firecracker/vmlinux.bin
-    kernel_args: "console=ttyS0 noapic reboot=k panic=1 pci=off nomodules rw"
-    socket_path: /var/run/fireactions/%s.sock
-    log_file_path: /var/log/fireactions/%s.log
-    log_level: debug
-
-  containerd:
-    address: /run/containerd/containerd.sock
-
-  cni:
-    conf_dir: /etc/cni/net.d
-    bin_dirs:
-    - /opt/cni/bin
-    - /opt/tc-redirect-tap/bin
-
+  name: ""
+  cpu_overcommit_ratio: 1.0
+  ram_overcommit_ratio: 1.0
+  labels: {}
+  reconcile_interval: 5s
   log_level: debug
