fix(client): Notify to restart fireactions service on symlink change

--- a/roles/client/tasks/main.yml
+++ b/roles/client/tasks/main.yml
@@ -41,6 +41,8 @@
     mode: 0755
     state: link
     force: true
+  notify:
+    - Restart fireactions
 
 - name: Template service file
   ansible.builtin.template:
