--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -18,7 +18,17 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
+    - name: Get GitHub token
+      uses: actions/create-github-app-token@v1
+      id: get_token
+      with:
+        app-id: ${{ secrets.HOSTINGERBOT_APP_ID }}
+        private-key: ${{ secrets.HOSTINGERBOT_PRIVATE_KEY }}
+        owner: ${{ github.repository_owner }}
+        repositories: |
+          ansible-collection-fireactions
+
     - name: Run release-please
       uses: google-github-actions/release-please-action@v4
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ steps.get_token.outputs.token }}
