--- a/roles/fireactions/defaults/main.yml
+++ b/roles/fireactions/defaults/main.yml
@@ -1,9 +1,8 @@
 ---
-fireactions_version: 0.1.1
+fireactions_version: 1.0.0
 fireactions_arch: amd64
-# (konradasb): TODO: Change this to GitHub releases after public release.
 fireactions_url: |
-  https://storage.googleapis.com/fireactions/fireactions-v{{ fireactions_version }}-linux-{{ fireactions_arch }}.tar.gz
+  https://github.com/hostinger/fireactions/releases/download/v{{ fireactions_version }}/fireactions-v{{ fireactions_version }}-linux-{{ fireactions_arch }}.tar.gz
 fireactions_install_dir: /opt/fireactions/{{ fireactions_version }}
 fireactions_group: root
 fireactions_owner: root
